--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&family=Quicksand:wght@300;400;500;600;700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
-
 * {
   margin: 0;
   padding: 0;
@@ -10,18 +8,37 @@
   width: 100%;
   display: flex;
   justify-content: center;
-
   margin-top: 140px;
+}
+.search-container {
+  position: relative;
+  z-index: 1;
+}
+.search-container input[type=text] {
+  width: 100%;
+  padding: 12px 20px;
+  margin: 8px 0;
+  box-sizing: border-box;
+  border: none;
+  border-radius: 4px;
+  background-color: white;
+}
+.search-container button {
+  width: auto;
+  padding: 10px 18px;
+  background-color: #4CAF50;
+  color: white;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
 }
 
 body {
-  background-image: url(https: //i.imgur.com/2GdDAoU.jpg);
-  background-repeat: norepeat;
+  width: 100%;
+  background-image: src="../ProjetoWebPi3/imagens/logo\ turma8.jpg";
   background-size: cover;
-  backround-attachment: fixed;
+  background-position: center;
 }
-
-.conteiner {}
 
 .card {
   background-color: #ffffff70;
@@ -144,4 +161,30 @@ a:hover {
   background-color: #ffbbbb;
   padding: 10px;
   display: none;
+}
+
+body {
+  background-image: url('/img/logo\ turma8.jpg');
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  background-attachment: fixed;
+  margin: 10%;
+  min-height: 90vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+
+
+
+.search-container {
+  text-align: center;
+  padding: 50px;
+}
+
+img {
+  float: left;
+  margin-right: 10px;
 }
